# AlloyPro

./: .gitignore  CLAUDE.md  README.md
agent/: .gitignore  agent.py  pyproject.toml
alloyprov1/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
alloyprov1/.lovable/: plan.md
alloyprov1/src/: App.css  App.tsx  index.css
alloyprov1/src/components/HUD/: CockpitSheet.tsx  HUDLayout.tsx  ViewportAR.tsx
alloyprov1/src/components/UI/: IndustrialAtoms.tsx
alloyprov1/src/data/: knowledgeResources.ts
alloyprov1/src/hooks/: useLocalVoiceDictation.ts  useVoiceDictation.ts
alloyprov1/src/pages/: Index.tsx  NewServiceRequest.tsx  OrderDetail.tsx  Resources.tsx  ServiceOrders.tsx
alloyprov1/src/store/: useCopilotStore.ts
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  DEPLOY.md  TROUBLESHOOTING.md
frontend/: .gitignore  app-config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/api/purchase/: route.ts
frontend/app/orders/: page.tsx
frontend/app/orders/[id]/: page.tsx
frontend/app/orders/new/: page.tsx
frontend/app/resources/: page.tsx
frontend/components/alloypro/: AlloyProSessionView.tsx  CockpitSheet.tsx  IndustrialAtoms.tsx  ViewportAR.tsx
frontend/components/alloypro/views/: IdleView.tsx  PartIDView.tsx  ProcedureView.tsx  ReportingView.tsx
frontend/components/app/: app.tsx  global-providers.tsx  view-controller.tsx  welcome-view.tsx
frontend/components/ui/: accordion.tsx
frontend/data/: knowledgeResources.ts
frontend/hooks/: useCopilotStore.ts
frontend/styles/: globals.css
(+5 files in other folders)
