[project]
name = "gemini-livekit-agent"
version = "0.1.0"
description = "Gemini LiveKit voice and vision agent"
requires-python = ">=3.10,<3.14"
dependencies = [
    "livekit-agents[google,images]~=1.3",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
